--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
     "nodemon": "^2.0.6"
   },
   "devDependencies": {
-    "cross-env": "^7.0.2"
+    "cross-env": "^7.0.2",
+    "eslint-config-prettier": "^6.14.0",
+    "prettier": "2.1.2"
   }
 }
