--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "C Boyle",
   "license": "ISC",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.1.13",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
