--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,11 @@
     "@googlemaps/google-maps-services-js": "^3.1.13",
     "@turf/turf": "^5.1.6",
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6"
