Added email functionality

--- a/server/config/sample-config.env
+++ b/server/config/sample-config.env
@@ -1,3 +1,6 @@
 PORT=Application Port
 MONGO_URI=URI for MongoDB Cloud instance
 GOOGLE_MAPS_API_KEY=API key for google maps
+SECRET_KEY=Secret key for jwt signing
+MAILTRAP_USER=Username for mailtrap testing service
+MAILTRAP_PW=Password for mailtrap testing service
