--- a/server/package.json
+++ b/server/package.json
@@ -17,12 +17,15 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "email-templates": "^8.0.4",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "mongoose-sequence": "^5.3.1",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.6"
+    "nodemailer": "^6.5.0",
+    "nodemon": "^2.0.6",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
